2006-11-07  Akim Demaille  <demaille@gostai.com>

	URBI_CONFIG_HEADERS_PREFIXED
	* config-headers-prefixed.mk, urbi-config-headers-prefixed.m4: New.
	* ax-prefix-config-h.m4: New.
	* README: Complete.
	* urbi-build-aux.m4: Don't issue AC_CONFIG_AUX_DIR here until
	libtoolize support traces.

2006-11-06  POTHIER Benoit  <pothier@gostai.com>

	Fix QT resource generation.
	* autotroll.mk: RCC instead of QRC.

2006-11-06  Akim Demaille  <akim@lrde.epita.fr>

	More Make macros, easier distcheck
	* urbi-dirs.m4 (SDK_CPPFLAGS, SDK_LDFLAGS): New.
	* init.mk (AM_LIBADD): Remove, Automake 1.10 doesn't like its name.
	* build-aux.mk: Include init.mk.
	This will requirement the adjustment of all its users.
	* urbi-build-aux.m4: New.
	* revision.mk (move_if_change): New.
	Ship it.

2006-11-04  Akim Demaille  <akim@lrde.epita.fr>

	Fix svn-externals -U
	* svn-externals: Use "all" instead of "" to denote the whole
	set of externals.
	* build-aux.mk (build_aux_dir, svn_externals): New.
	Use them.
	Pass host directories are arguments instead of cd'ing into them.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	Fix -U
	* svn-externals: Fix handling of -U.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	svn-externals: Accept dir list
	* svn-externals: Accept dir list.
	* build-aux.mk: Don't use $(top_srcdir) in EXTRA_DIST,
	Automake dislikes very much.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	More typos.
	* urbi-dirs.m4: Quote the definition of urbiincludedir.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	Bad typo
	* urbi-dirs.m4: urbiincludedir, not dire.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	init.mk
	* urbi-dirs.m4 (urbiincludedir): New.
	* init.mk: New.

2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix last changes.
	* autotroll.mk: Take Automake's complain into account:
          "<: non-POSIX variable name".
	* autotroll.m4: AC_MSG_WARNING is AC_MSG_WARN.

2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
