@@ -1,17 +1,11 @@
-# Before including this makefile snippet, define:
-
+# There is no point in maintaining a stamp file, Automake already does
+# this for config.h.  Arguably, we could use _configs.sed, but it is
+# not documented.
+BUILT_SOURCES += $(PREFIXED_CONFIG_HEADER)
 $(PREFIXED_CONFIG_HEADER): $(CONFIG_HEADER)
-	@if test ! -f $@; then \
-	  rm -f $(PREFIXED_CONFIG_HEADER).stamp; \
-	  $(MAKE) $(AM_MAKEFLAGS) $(PREFIXED_CONFIG_HEADER).stamp; \
-	else :; fi
-
-$(PREFIX_CONFIG_H).stamp: $(CONFIG_HEADER) $(top_builddir)/config.status
-	@rm -f $@
-	cd $(top_builddir) && $(SHELL) ./config.status $(PREFIXED_CONFIG_HEADER)
-	@touch $@
+	cd $(top_builddir) && \
+	$(SHELL) ./config.status $(PREFIXED_CONFIG_HEADER)
 
 CLEANFILES +=					\
 _configs.sed					\
-$(PREFIXED_CONFIG_HEADER) 			\
-$(PREFIXED_CONFIG_HEADER).stamp
+$(PREFIXED_CONFIG_HEADER)
